Actions
Bug #12053
openlibefi: luns failing to expand
Start date:
Due date:
% Done:
50%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
based on two commits:
https://github.com/delphix/delphix-os/commit/f4cd7e14f3589f05c2eafbb088dcebe2d96410c7
https://github.com/zfsonlinux/zfs/commit/475ebd763a7bc963b64118c22244cb0cd795d778
Also introduce DEV_BLOCKS() macro to calculate number of device blocks.
Add NEW_START_BLOCK and PARTITION_END_ALIGNMENT to create 1MB alignment.
TESTING: to be done.
Actions