12053 libefi: luns failing to expand

based on two commits:
https://github.com/delphix/delphix-os/commit/f4cd7e14f3589f05c2eafbb088dcebe2d96410c7
https://github.com/zfsonlinux/zfs/commit/475ebd763a7bc963b64118c22244cb0cd795d778

Also introduce DEV_BLOCKS() macro to calculate number of device blocks.
Add NEW_START_BLOCK and PARTITION_END_ALIGNMENT to create 1MB alignment.

Change-Id: Iaf8e0e28c3ba6799c27a44ae9ef9a8d8e440c930