usr/src/lib/libefi/common/rdwr_efi.c
@@ -44,6 +44,7 @@
 #include <sys/efi_partition.h>
 #include <sys/byteorder.h>
 #include <sys/ddi.h>
+#include <sys/sysmacros.h>
 
 /*
  * The original conversion array used simple array index, but since
@@ -163,8 +164,7 @@ uint_t
 efi_reserved_sectors(dk_gpt_t *efi)
 {
 	/* roundup to sector size */
-	return ((EFI_MIN_RESV_SIZE * DEV_BSIZE + efi->efi_lbasize - 1) /
-	    efi->efi_lbasize);
+	return (DEV_BLOCKS(EFI_MIN_RESV_SIZE, efi->efi_lbasize));
 }
 
 int
@@ -912,31 +912,85 @@ efi_use_whole_disk(int fd)
 	struct dk_gpt		*efi_label;
 	int			rval;
 	int			i;
-	uint_t			phy_last_slice = 0;
-	diskaddr_t		pl_start = 0;
-	diskaddr_t		pl_size;
+	uint_t			resv_index = 0, data_index = 0;
+	diskaddr_t		resv_start = 0, data_start = 0;
+	diskaddr_t		data_size, limit, difference;
+	boolean_t		sync_needed = B_FALSE;
+	uint_t			nblocks, reserved;
 
 	rval = efi_alloc_and_read(fd, &efi_label);
 	if (rval < 0) {
 		return (rval);
 	}
+	/* Size of reserved partition. */
+	reserved = efi_reserved_sectors(efi_label);
 
-	/* find the last physically non-zero partition */
-	for (i = 0; i < efi_label->efi_nparts - 2; i ++) {
-		if (pl_start < efi_label->efi_parts[i].p_start) {
-			pl_start = efi_label->efi_parts[i].p_start;
-			phy_last_slice = i;
+	/*
+	 * Initialize resv_index to efi_nparts, so we can use it for search of
+	 * data partition.
+	 */
+	resv_index = efi_label->efi_nparts;
+
+	/* Find reserved partition. */
+	for (i = 0; i < efi_label->efi_nparts; i ++) {
+		if (efi_label->efi_parts[i].p_tag == V_RESERVED) {
+			resv_start = efi_label->efi_parts[i].p_start;
+			resv_index = i;
+			break;
 		}
 	}
-	pl_size = efi_label->efi_parts[phy_last_slice].p_size;
+
+	/*
+	 * Find the last physically non-zero partition before that.
+	 * This is the data partition.
+	 */
+	for (i = 0; i < resv_index; i ++) {
+		if (data_start < efi_label->efi_parts[i].p_start) {
+			data_start = efi_label->efi_parts[i].p_start;
+			data_index = i;
+		}
+	}
+	data_size = efi_label->efi_parts[data_index].p_size;
+
+	/*
+	 * See the "efi_alloc_and_init" function for more information
+	 * about where this "nblocks" value comes from.
+	 */
+	nblocks = efi_label->efi_first_u_lba - 1;
+
+	/*
+	 * Determine if the EFI label is out of sync. We check that:
+	 *
+	 * 1. the data partition ends at the limit we set, and
+	 * 2. the reserved partition starts at the limit we set.
+	 *
+	 * If either of these conditions is not met, then we need to
+	 * resync the EFI label.
+	 *
+	 * The limit is the last usable LBA, determined by the last LBA
+	 * and the first usable LBA fields on the EFI label of the disk
+	 * (see the lines directly above). Additionally, we factor in
+	 * EFI_MIN_RESV_SIZE (per its use in "zpool_label_disk") and
+	 * P2ALIGN it to ensure the partition boundaries are aligned
+	 * (for performance reasons). The alignment should match the
+	 * alignment used by the "zpool_label_disk" function.
+	 */
+	limit = P2ALIGN(efi_label->efi_last_lba - nblocks - reserved,
+	    DEV_BLOCKS(PARTITION_END_ALIGNMENT, efi_label->efi_lbasize));
+	if (data_start + data_size != limit || resv_start != limit)
+		sync_needed = B_TRUE;
+
+	if (efi_debug && sync_needed)
+		(void) fprintf(stderr, "efi_use_whole_disk: sync needed\n");
 
 	/*
 	 * If alter_lba is 1, we are using the backup label.
 	 * Since we can locate the backup label by disk capacity,
 	 * there must be no unallocated space.
 	 */
-	if ((efi_label->efi_altern_lba == 1) || (efi_label->efi_altern_lba
-	    >= efi_label->efi_last_lba)) {
+	if ((efi_label->efi_altern_lba == 1) ||
+	    (efi_label->efi_altern_lba >= efi_label->efi_last_lba &&
+	    !sync_needed)) {
 		if (efi_debug) {
 			(void) fprintf(stderr,
 			    "efi_use_whole_disk: requested space not found\n");
@@ -946,26 +1000,64 @@ efi_use_whole_disk(int fd)
 	}
 
 	/*
-	 * If there is space between the last physically non-zero partition
-	 * and the reserved partition, just add the unallocated space to this
-	 * area. Otherwise, the unallocated space is added to the last
-	 * physically non-zero partition.
+	 * Verify that we've found the reserved partition by checking
+	 * that it looks the way it did when we created it in zpool_label_disk.
+	 * If we've found the incorrect partition, then we know that this
+	 * device was reformatted and no longer is solely used by ZFS.
 	 */
-	if (pl_start + pl_size - 1 == efi_label->efi_last_u_lba -
-	    efi_reserved_sectors(efi_label)) {
-		efi_label->efi_parts[phy_last_slice].p_size +=
-		    efi_label->efi_last_lba - efi_label->efi_altern_lba;
+	if ((resv_index == efi_label->efi_nparts) ||
+	    (efi_label->efi_parts[resv_index].p_size != reserved) ||
+	    (efi_label->efi_parts[resv_index].p_tag != V_RESERVED)) {
+		if (efi_debug) {
+			(void) fprintf(stderr,
+			    "efi_use_whole_disk: wholedisk not available\n");
+		}
+		efi_free(efi_label);
+		return (VT_ENOSPC);
 	}
+
+	if (data_start + data_size != resv_start) {
+		if (efi_debug) {
+			(void) fprintf(stderr,
+			    "efi_use_whole_disk: "
+			    "data_start (%lli) + "
+			    "data_size (%lli) != "
+			    "resv_start (%lli)\n",
+			    data_start, data_size, resv_start);
+		}
+
+		return (VT_EINVAL);
+	}
+
+	if (limit < resv_start) {
+		if (efi_debug) {
+			(void) fprintf(stderr,
+			    "efi_use_whole_disk: "
+			    "limit (%lli) < resv_start (%lli)\n",
+			    limit, resv_start);
+		}
+
+		return (VT_EINVAL);
+	}
+
+	difference = limit - resv_start;
+
+	if (efi_debug)
+		(void) fprintf(stderr,
+		    "efi_use_whole_disk: difference is %lli\n", difference);
+
+	/*
+	 * Add the unallocated space to the last physically non-zero partition.
+	 */
+	efi_label->efi_parts[data_index].p_size += difference;
 
 	/*
 	 * Move the reserved partition. There is currently no data in
 	 * here except fabricated devids (which get generated via
 	 * efi_write()). So there is no need to copy data.
 	 */
-	efi_label->efi_parts[efi_label->efi_nparts - 1].p_start +=
-	    efi_label->efi_last_lba - efi_label->efi_altern_lba;
-	efi_label->efi_last_u_lba += efi_label->efi_last_lba
-	    - efi_label->efi_altern_lba;
+	efi_label->efi_parts[resv_index].p_start += difference;
+	efi_label->efi_last_u_lba = efi_label->efi_last_lba - nblocks;
 
 	rval = efi_write(fd, efi_label);
 	if (rval < 0) {
@@ -974,14 +1066,11 @@ efi_use_whole_disk(int fd)
 			    "efi_use_whole_disk:fail to write label, rval=%d\n",
 			    rval);
 		}
-		efi_free(efi_label);
-		return (rval);
 	}
 
 	efi_free(efi_label);
-	return (0);
+	return (rval);
 }
-
 
 /*
  * write EFI label and backup label
